tooling/tree-sitter-w/grammar.js
    source_file: ($) =>
      choice(
        seq(
          optional($.module_header),
          repeat(
            choice(
              $.service_import_statement,
              $.domain_import_statement,
              $.kernel_import_statement,
              $.import_statement,
              $.reexport_declaration,
            ),
          ),
          repeat($._declaration),
        ),
        $.build_manifest,
      ),

    import_statement: ($) =>
      seq(
        "import",
        choice(
          seq(
            field("items", $.wildcard_import),
            "from",
            field("module", $.module_path),
          ),
          seq(
            field("items", $.named_imports),
            "from",
            field("module", $.module_path),
          ),
          seq(
            field("binding", $.identifier),
            "from",
            field("origin", $.module_path),
          ),
          field("module", $.module_path),
        ),
        optional(";"),
      ),

    named_imports: ($) => seq("{", commaSep1($.import_item), optional(","), "}"),
    import_item: ($) =>
      seq(field("name", $.identifier), optional(seq("as", field("alias", $.identifier)))),
    module_path: ($) =>
      prec.right(seq(
        $._contextual_identifier,
        repeat(seq(".", $._contextual_identifier)),
      )),

    _declaration: ($) =>
      choice(
        $.export_list_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.object_declaration,
        $.service_declaration,
        $.enum_declaration,
        $.protocol_declaration,
        $.type_declaration,
        $.alias_declaration,
        $.dimension_declaration,
        $.unit_declaration,
        $.extension_declaration,
        $.behavior_declaration,
        $.entry_declaration,
        $.foreign_declaration,
        $.const_declaration,
        $.test_declaration,
      ),

    declaration_prefix: (_) => "export",

    _function_header: ($) =>
      seq($._function_prefix, optional($.abi_contract), $._function_tail),
    _foreign_function_header: ($) =>
      seq($._function_prefix, $.language_tag, $._function_tail),
    function_declaration: ($) =>
      choice(
        seq($._function_header, field("body", $.block)),
        seq($._foreign_function_header, field("body", $.foreign_body)),
      ),
    language_tag: ($) =>
      seq(
        token.immediate("<"),
        choice(
          field("language", $.identifier),
          seq("lang", ":", field("language", $.contextual_member_expression)),
        ),
        repeat(seq(",", field("option", $.type_argument))),
        optional(","),
        ">",
      ),

    parameter_list: ($) => seq("(", commaSep($.parameter), optional(","), ")"),
    parameter: ($) =>
      choice(
        seq(
          "allocator",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("name", alias("allocator", $.identifier)),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          "_",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("label", $.identifier),
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
        seq(
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
          optional(seq("=", field("default", $._expression))),
        ),
      ),
    struct_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "struct",
        field("name", $._type_identifier),
        optional($.generic_parameters),
        optional($.conformance_clause),
        $.type_body,
      ),
    protocol_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "protocol",
        field("name", $._type_identifier),
        optional($.primary_associated_types),
        optional($.conformance_clause),
        $.protocol_body,
      ),
    enum_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "enum",
        field("name", $._type_identifier),
        optional($.generic_parameters),
        optional(seq(":", field("conformance", $.type))),
        $.enum_body,
      ),

    conformance_clause: ($) => seq(":", $.type),
    type_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.field_declaration,
            $.computed_property_declaration,
            $.initializer_declaration,
            $.function_declaration,
            $.const_declaration,
            $.alias_declaration,
            $.deinit_declaration,
          ),
        ),
        "}",
      ),
    protocol_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.function_declaration,
            alias($.function_signature, $.function_declaration),
            $.property_requirement,
            $.associated_type_requirement,
            $.associated_const_requirement,
          ),
        ),
        "}",
      ),
    enum_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.enum_case,
            $.computed_property_declaration,
            $.function_declaration,
            $.const_declaration,
            $.alias_declaration,
          ),
        ),
        "}",
      ),

    associated_type_requirement: ($) =>
      seq(
        "type",
        field("name", $._type_identifier),
        optional(seq(":", field("constraint", $.type))),
        optional(";"),
      ),
    associated_const_requirement: ($) =>
      seq(
        "const",
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(";"),
      ),

    field_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        field("binding", choice("let", "var")),
        choice(
          seq(
            field("storage_modifier", choice("atomic", $.identifier)),
            field("name", $.identifier),
          ),
          field("name", $.identifier),
        ),
        choice(
          seq(
            ":",
            field("type", $.property_type),
            optional(seq("=", field("value", $._expression))),
          ),
          seq("=", field("value", $._expression)),
        ),
        optional(";"),
      ),

    enum_case: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", commaSep1($.enum_case_parameter), optional(","), ")")),
        optional(";"),
      ),
    type_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "type",
        field("name", $._type_identifier),
        optional($.generic_parameters),
        "=",
        field("value", $.type),
        optional(";"),
      ),

    alias_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "alias",
        field("name", $._type_identifier),
        optional($.generic_parameters),
        "=",
        field("value", $.type),
        optional(";"),
      ),

    dimension_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "dimension",
        field("name", $._type_identifier),
        optional(";"),
      ),

    unit_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "unit",
        field("name", $.identifier),
        choice(
          seq(":", field("dimension", $.type)),
          seq("=", field("value", $._expression)),
        ),
        optional(";"),
      ),

    behavior_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "behavior",
        field("name", $._type_identifier),
        optional($.generic_parameters),
        "for",
        field("logical_type", $.type),
        choice(
          field("body", $.behavior_body),
          seq("=", field("composition", $.behavior_composition)),
        ),
        optional(";"),
      ),

    // A composition is nominal and closed. Each component has a stable alias
    // so inherited facets remain qualified at every use site.
    behavior_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.behavior_field_declaration,
            $.behavior_accessor,
            $.behavior_facet_property,
            $.behavior_hook,
            $.function_declaration,
          ),
        ),
        "}",
      ),
    behavior_accessor: ($) =>
      choice(
        $.behavior_initializer,
        seq(
          optional("mut"),
          field("kind", $.behavior_accessor_kind),
          optional($.behavior_parameter_list),
          field("body", $.block),
        ),
      ),
    behavior_parameter_list: ($) =>
      seq("(", commaSep($.behavior_parameter), optional(","), ")"),
    behavior_parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
      ),
    entry_declaration: ($) =>
      seq(
        "entry",
        choice(
          field("body", $.block),
          $._entry_default_handler,
          seq(
            field("name", $._type_identifier),
            choice(field("body", $.block), $._entry_default_handler),
          ),
        ),
      ),
    _entry_default_handler: ($) =>
      seq("(", field("default_handler", $.identifier), ")"),

    const_declaration: ($) =>
      seq(
        optional($.declaration_prefix),
        "const",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", $._expression),
        optional(";"),
      ),

    type: ($) =>
      prec.right(
        seq(
          optional(
            field(
              "qualifier",
              choice(
                "any",
                "some",
                "shared",
                "weak",
                "ref",
                "const",
                "view",
                seq("ref", "any"),
                seq("ref", "some"),
                seq("mut", "ref"),
                seq("mut", "view"),
              ),
            ),
          ),
          $._type_core,
          repeat(seq("&", field("composition", $._type_core))),
          optional("?"),
        ),
      ),
    _type_core: ($) =>
      choice(
        seq(
          field("base", $.type_name),
          repeat($.type_arguments),
        ),
        field("base", $.tuple_type),
        field("base", $.fixed_array_type),
        field("base", $.function_type),
      ),
    type_name: ($) =>
      prec.right(seq(field("name", $._type_identifier), repeat(seq(".", field("member", $._type_identifier))))),
    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    type_arguments: ($) =>
      seq(token.immediate("<"), commaSep1($.type_argument), optional(","), ">"),
    type_argument: ($) =>
      choice(
        $.contract_expression_argument,
        $.static_record_literal,
        $.static_array_literal,
        $.type,
        $.number_literal,
        $.boolean_literal,
        $.string_literal,
        $.quantity_literal,
        $.size_literal,
        $.contextual_member_expression,
        seq(
          field("label", $.identifier),
          ":",
          field("value", $.static_argument_value),
        ),
      ),
    static_argument_value: ($) =>
      choice(
        $.contract_expression_argument,
        $.static_record_literal,
        prec(1, $.identifier),
        $.type,
        $.number_literal,
        $.boolean_literal,
        $.string_literal,
        $.quantity_literal,
        $.size_literal,
        $.contextual_member_expression,
        $.static_array_literal,
      ),
    contract_expression_argument: ($) =>
      seq(
        "(",
        field("expression", choice($._expression, $.one_sided_range_expression)),
        ")",
      ),
    static_record_literal: ($) =>
      seq(
        "{",
        commaSep(
          seq(
            field("name", $.identifier),
            ":",
            field("value", $.static_argument_value),
          ),
        ),
        optional(","),
        "}",
      ),
    static_array_literal: ($) =>
      seq(
        "[",
        commaSep($.static_argument_value),
        optional(","),
        "]",
      ),
    fixed_array_type: ($) =>
      seq(
        "[",
        field("element", $.type),
        ";",
        field("count", $._expression),
        "]",
      ),
    tuple_type: ($) =>
      choice(
        seq("(", ")"),
        seq(
          "(",
          $.type,
          ",",
          optional(seq(commaSep1($.type), optional(","))),
          ")",
        ),
        seq(
          "(",
          $.labeled_tuple_type_element,
          ",",
          optional(seq(commaSep1($.labeled_tuple_type_element), optional(","))),
          ")",
        ),
      ),
    function_type: ($) =>
      choice(
        prec.right(
          3,
          seq(
            optional("unsafe"),
            field("callable_mode", choice("mut", "take")),
            optional("async"),
            $._function_type_signature,
          ),
        ),
        prec.right(
          2,
          seq(
            optional("unsafe"),
            optional("async"),
            $._function_type_signature,
          ),
        ),
      ),
    _function_type_signature: ($) =>
      prec.right(
        seq(
          "fn",
          optional(field("contract", $.type_arguments)),
          "(",
          commaSep($.function_type_parameter),
          optional(","),
          ")",
          optional(seq(":", field("return_type", $.type))),
          optional(seq("throws", field("error_type", $.type))),
          optional($.borrow_clause),
        ),
      ),
    function_type_parameter: ($) =>
      choice(
        seq(
          "allocator",
          field("name", $.identifier),
          ":",
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
        ),
        seq(
          optional(field("ownership", $.parameter_call_ownership)),
          field("type", $.parameter_type),
          optional(field("rest", $.rest_marker)),
        ),
      ),

    block: ($) => seq("{", repeat($._statement), "}"),
    _statement: ($) =>
      choice(
        $.allocator_statement,
        $.binding_declaration,
        $.commit_statement,
        $.return_statement,
        $.throw_statement,
        $.defer_statement,
        $.guard_statement,
        $.if_statement,
        $.labeled_statement,
        $.while_statement,
        $.for_statement,
        $.repeat_statement,
        $.do_statement,
        $.break_statement,
        $.continue_statement,
        $.expression_statement,
        $.yield_statement,
      ),

    return_statement: ($) =>
      prec.right(seq("return", optional($._expression), optional(";"))),
    defer_statement: ($) => seq("defer", optional("async"), $.block),
    switch_expression: ($) =>
      seq("switch", field("value", $._expression), "{", repeat1($.switch_case), "}"),
    expression_statement: ($) => seq($._expression, optional(";")),
