tooling/tree-sitter-w/test/corpus/db2_surface.txt
==================
DB2 units refinements and imports
==================

import std.si
import std.tensor as tensor
import { Quantity } from std.units

export dimension Applause
export unit clap: Applause
export unit ovation = 1_000<clap>

export type Ratio = f64<(0.0...1.0)>
export type Buffer<const count: usize> = [u8; count]
export type SmallBytes = Array<u8><(.count <= 64)>

fn inspectStaticPayloads() {
  let predicate = ContractProbe<(.count > 0 && .count <= 64)>()
  let record = ContractProbe<{mode: .strict, retries: 0}>()
  let pipeline = ContractProbe<[.parse, .verify, .lower]>()
}

---

(source_file
  (import_statement
    (module_path
      (identifier)
      (identifier)))
  (import_statement
    (module_path
      (identifier)
      (identifier))
    (identifier))
  (import_statement
    (named_imports
      (import_item
        (identifier)))
    (module_path
      (identifier)
      (identifier)))
  (dimension_declaration
    (declaration_prefix)
    (type_identifier))
  (unit_declaration
    (declaration_prefix)
    (identifier)
    (type
      (type_name
        (type_identifier))))
  (unit_declaration
    (declaration_prefix)
    (identifier)
    (quantity_literal))
  (type_declaration
    (declaration_prefix)
    (type_identifier)
    (type
      (type_name
        (type_identifier))
      (type_arguments
        (type_argument
          (contract_expression_argument
            (bounded_range_expression
              (number_literal)
              (number_literal)))))))
  (type_declaration
    (declaration_prefix)
    (type_identifier)
    (type_parameters
      (type_parameter
        (identifier)
        (type
          (type_name
            (type_identifier)))))
    (type
      (fixed_array_type
        (type
          (type_name
            (type_identifier)))
        (identifier))))
  (type_declaration
    (declaration_prefix)
    (type_identifier)
    (type
      (type_name
        (type_identifier))
      (type_arguments
        (type_argument
          (type
            (type_name
              (type_identifier)))))
      (type_arguments
        (type_argument
          (contract_expression_argument
            (binary_expression
              (contextual_member_expression
                (identifier))
              (number_literal)))))))
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (binding_declaration
        (pattern
          (identifier))
        (call_expression
          (generic_application_expression
            (identifier)
            (generic_call_arguments
              (contract_expression_argument
                (binary_expression
                  (binary_expression
                    (contextual_member_expression
                      (identifier))
                    (number_literal))
                  (binary_expression
                    (contextual_member_expression
                      (identifier))
                    (number_literal))))))
          (argument_list)))
      (binding_declaration
        (pattern
          (identifier))
        (call_expression
          (generic_application_expression
            (identifier)
            (generic_call_arguments
              (static_record_literal
                (identifier)
                (static_argument_value
                  (contextual_member_expression
                    (identifier)))
                (identifier)
                (static_argument_value
                  (number_literal)))))
          (argument_list)))
      (binding_declaration
        (pattern
          (identifier))
        (call_expression
          (generic_application_expression
            (identifier)
            (generic_call_arguments
              (static_array_literal
                (static_argument_value
                  (contextual_member_expression
                    (identifier)))
                (static_argument_value
                  (contextual_member_expression
                    (identifier)))
                (static_argument_value
                  (contextual_member_expression
                    (identifier))))))
          (argument_list))))))

==================
DB2 domains unsafe and entries
==================

enum LastLightDomain: ExecutionDomain {
  thermal
}

unsafe fn<C> checksum(data: c.ptr<c.uchar>): c.uint {
  return unsafe { c_checksum(data) }
}

unsafe fn<lang: .c> namedChecksum(data: c.ptr<c.uchar>): c.uint {
  return unsafe { c_checksum(data) }
}

async fn prepare(): Dish {
  async<.network> let stock = fetchStock()
  spawn<.compute> let plan = calculatePlan()
  spawn<domain: LastLightDomain.thermal> let heat = calculateHeat()
  defer async { await stock.close() }
  return await cook(stock, plan: plan)
}

entry LastLight {
  process.main = run
  http.fetch = fetch
}

---

(source_file
  (enum_declaration
    (type_identifier)
    (type
      (type_name
        (type_identifier)))
    (enum_body
      (enum_case
        (identifier))))
  (function_declaration
    (language_tag
      (identifier))
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier)
            (type_identifier))
          (type_arguments
            (type_argument
              (type
                (type_name
                  (type_identifier)
                  (type_identifier))))))))
    (type
      (type_name
        (type_identifier)
        (type_identifier)))
    (block
      (return_statement
        (unsafe_expression
          (block
            (expression_statement
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (identifier))))))))))
  (function_declaration
    (language_tag
      (contextual_member_expression
        (identifier)))
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier)
            (type_identifier))
          (type_arguments
            (type_argument
              (type
                (type_name
                  (type_identifier)
                  (type_identifier))))))))
    (type
      (type_name
        (type_identifier)
        (type_identifier)))
    (block
      (return_statement
        (unsafe_expression
          (block
            (expression_statement
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (identifier))))))))))
  (function_declaration
    (identifier)
    (parameter_list)
    (type
      (type_name
        (type_identifier)))
    (block
      (binding_declaration
        (task_contract
          (contextual_member_expression
            (identifier)))
        (pattern
          (identifier))
        (call_expression
          (identifier)
          (argument_list)))
      (binding_declaration
        (task_contract
          (contextual_member_expression
            (identifier)))
        (pattern
          (identifier))
        (call_expression
          (identifier)
          (argument_list)))
      (binding_declaration
        (task_contract
          (identifier)
          (static_argument_value
            (type
              (type_name
                (type_identifier)
                (type_identifier)))))
        (pattern
          (identifier))
        (call_expression
          (identifier)
          (argument_list)))
      (defer_statement
        (block
          (expression_statement
            (unary_expression
              (call_expression
                (member_expression
                  (identifier)
                  (identifier))
                (argument_list))))))
      (return_statement
        (unary_expression
          (call_expression
            (identifier)
            (argument_list
              (argument
                (identifier))
              (argument
                (identifier)
                (identifier))))))))
  (entry_declaration
    (type_identifier)
    (entry_binding
      (module_path
        (identifier)
        (identifier))
      (identifier))
    (entry_binding
      (module_path
        (identifier)
        (identifier))
      (identifier))))

==================
DB2 tensors and switch expressions
==================

fn classify<const batch: usize>(
  input: ref Tensor<f32, shape: [batch, 8]>,
  weights: ref Tensor<f32, shape: [8, 4]>,
): Tensor<f32, shape: [batch, 4]> {
  let logits = input @ weights
  let first = logits[0, 0]
  return switch batch {
    case 0: logits
    case _: logits
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (type_parameters
      (type_parameter
        (identifier)
        (type
          (type_name
            (type_identifier)))))
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier))
          (type_arguments
            (type_argument
              (type
                (type_name
                  (type_identifier))))
            (type_argument
              (identifier)
              (static_argument_value
                (static_array_literal
                  (static_argument_value
                    (identifier))
                  (static_argument_value
                    (number_literal))))))))
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier))
          (type_arguments
            (type_argument
              (type
                (type_name
                  (type_identifier))))
            (type_argument
              (identifier)
              (static_argument_value
                (static_array_literal
                  (static_argument_value
                    (number_literal))
                  (static_argument_value
                    (number_literal)))))))))
    (type
      (type_name
        (type_identifier))
      (type_arguments
        (type_argument
          (type
            (type_name
              (type_identifier))))
        (type_argument
          (identifier)
          (static_argument_value
            (static_array_literal
              (static_argument_value
                (identifier))
              (static_argument_value
                (number_literal)))))))
    (block
      (binding_declaration
        (pattern
          (identifier))
        (binary_expression
          (identifier)
          (identifier)))
      (binding_declaration
        (pattern
          (identifier))
        (index_expression
          (identifier)
          (number_literal)
          (number_literal)))
      (return_statement
        (switch_expression
          (identifier)
          (switch_case
            (pattern
              (number_literal))
            (expression_statement
              (identifier)))
          (switch_case
            (pattern)
            (expression_statement
              (identifier))))))))

==================
DB2 property behavior accessors
==================

behavior Versioned<Value> for Value {
  storage var current: Value
  storage var revision: u64 = 0
  initialValue

  init {
    current = initialValue()
  }

  get {
    return current
  }

  mut set(newValue) {
    current = newValue
    revision += 1
  }
}

---

(source_file
  (behavior_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    (type
      (type_name
        (type_identifier)))
    (behavior_body
      (behavior_storage_declaration
        (identifier)
        (type
          (type_name
            (type_identifier))))
      (behavior_storage_declaration
        (identifier)
        (type
          (type_name
            (type_identifier)))
        (number_literal))
      (behavior_value_declaration
        (identifier))
      (behavior_accessor
        (block
          (expression_statement
            (assignment_expression
              (identifier)
              (call_expression
                (identifier)
                (argument_list))))))
      (behavior_accessor
        (block
          (return_statement
            (identifier))))
      (behavior_accessor
        (behavior_parameter_list
          (behavior_parameter
            (identifier)))
        (block
          (expression_statement
            (assignment_expression
              (identifier)
              (identifier)))
          (expression_statement
            (assignment_expression
              (identifier)
              (number_literal))))))))

==================
DB2 static and mutable receivers
==================

protocol Additive {
  type Scalar
  const zero: Self
  static fn from(value: Scalar): Self
}

struct Counter: Additive {
  alias Scalar = u64
  var value: u64
  const zero = Counter(value: 0)

  static fn from(value: u64): Counter {
    return Counter(value: value)
  }

  mut fn increment(): self {
    value += 1
  }
}

fn touch(): () {
  return ()
}

---

(source_file
  (protocol_declaration
    (type_identifier)
    (protocol_body
      (associated_type_requirement
        (type_identifier))
      (associated_const_requirement
        (identifier)
        (type
          (type_name
            (type_identifier))))
      (function_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type
              (type_name
                (type_identifier)))))
        (type
          (type_name
            (type_identifier))))))
  (struct_declaration
    (type_identifier)
    (conformance_clause
      (type
        (type_name
          (type_identifier))))
    (type_body
      (alias_declaration
        (type_identifier)
        (type
          (type_name
            (type_identifier))))
      (field_declaration
        (identifier)
        (type
          (type_name
            (type_identifier))))
      (const_declaration
        (identifier)
        (call_expression
          (identifier)
          (argument_list
            (argument
              (identifier)
              (number_literal)))))
      (function_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type
              (type_name
                (type_identifier)))))
        (type
          (type_name
            (type_identifier)))
        (block
          (return_statement
            (call_expression
              (identifier)
              (argument_list
                (argument
                  (identifier)
                  (identifier)))))))
      (function_declaration
        (identifier)
        (parameter_list)
        (type
          (type_name
            (type_identifier)))
        (block
          (expression_statement
            (assignment_expression
              (identifier)
              (number_literal)))))))
  (function_declaration
    (identifier)
    (parameter_list)
    (type
      (tuple_type))
    (block
      (return_statement
        (unit_literal)))))

==================
DB2 static lists and callable types
==================

enum Stage {
  reserve
  prepare
  serve
}

struct StagePlan<const _ stages: StaticList<Stage>> {
  id: usize
}

fn standardPlan(id: usize): StagePlan<[.reserve, .prepare, .serve]> {
  return StagePlan(id: id)
}

fn apply(value: Int, using operation: fn(Int): Int): Int {
  return operation(value)
}

fn load(
  path: ref Path,
  using loader: some async fn(ref Path): Bytes throws IoError,
): Bytes throws IoError {
  return try await loader(path)
}

struct Pipeline {
  transform: any mut fn(inout Buffer, take Command): Result
  finalize: any take fn(take Session): Receipt
}

type SensorCallback =
  unsafe fn<abi: .c>(c.ptr<void>, c.int): ()

fn counter(initial: usize): some mut fn(): usize {
  var next = initial
  return capture(take next) () => {
    next += 1
    return next
  }
}

---

(source_file
  (enum_declaration
    (type_identifier)
    (enum_body
      (enum_case
        (identifier))
      (enum_case
        (identifier))
      (enum_case
        (identifier))))
  (struct_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (identifier)
        (type
          (type_name
            (type_identifier))
          (type_arguments
            (type_argument
              (type
                (type_name
                  (type_identifier))))))))
    (type_body
      (field_declaration
        (identifier)
        (type
          (type_name
            (type_identifier))))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier)))))
    (type
      (type_name
        (type_identifier))
      (type_arguments
        (type_argument
          (static_array_literal
            (static_argument_value
              (contextual_member_expression
                (identifier)))
            (static_argument_value
              (contextual_member_expression
                (identifier)))
            (static_argument_value
              (contextual_member_expression
                (identifier)))))))
    (block
      (return_statement
        (call_expression
          (identifier)
          (argument_list
            (argument
              (identifier)
              (identifier)))))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (identifier)
        (type
          (function_type
            (function_type_parameter
              (type
                (type_name
                  (type_identifier))))
            (type
              (type_name
                (type_identifier)))))))
    (type
      (type_name
        (type_identifier)))
    (block
      (return_statement
        (call_expression
          (identifier)
          (argument_list
            (argument
              (identifier)))))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier))))
      (parameter
        (identifier)
        (identifier)
        (type
          (function_type
            (function_type_parameter
              (type
                (type_name
                  (type_identifier))))
            (type
              (type_name
                (type_identifier)))
            (type
              (type_name
                (type_identifier)))))))
    (type
      (type_name
        (type_identifier)))
    (type
      (type_name
        (type_identifier)))
    (block
      (return_statement
        (unary_expression
          (unary_expression
            (call_expression
              (identifier)
              (argument_list
                (argument
                  (identifier)))))))))
  (struct_declaration
    (type_identifier)
    (type_body
      (field_declaration
        (identifier)
        (type
          (function_type
            (function_type_parameter
              (type
                (type_name
                  (type_identifier))))
            (function_type_parameter
              (type
                (type_name
                  (type_identifier))))
            (type
              (type_name
                (type_identifier))))))
      (field_declaration
        (identifier)
        (type
          (function_type
            (function_type_parameter
              (type
                (type_name
                  (type_identifier))))
            (type
              (type_name
                (type_identifier))))))))
  (type_declaration
    (type_identifier)
    (type
      (function_type
        (type_arguments
          (type_argument
            (identifier)
            (static_argument_value
              (contextual_member_expression
                (identifier)))))
        (function_type_parameter
          (type
            (type_name
              (type_identifier)
              (type_identifier))
            (type_arguments
              (type_argument
                (type
                  (type_name
                    (type_identifier)))))))
        (function_type_parameter
          (type
            (type_name
              (type_identifier)
              (type_identifier))))
        (type
          (tuple_type)))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type
          (type_name
            (type_identifier)))))
    (type
      (function_type
        (type
          (type_name
            (type_identifier)))))
    (block
      (binding_declaration
        (pattern
          (identifier))
        (identifier))
      (return_statement
        (capture_expression
          (capture_item
            (identifier))
          (closure_expression
            (closure_parameters)
            (block
              (expression_statement
                (assignment_expression
                  (identifier)
                  (number_literal)))
              (return_statement
                (identifier)))))))))

==================
Callable type labels recover before the next declaration
==================

type Invalid = fn(value: Int): Int

fn stillVisible(): Bool {
  return true
}

---

(source_file
  (type_declaration
    (type_identifier)
    (type
      (function_type
        (function_type_parameter
          (type
            (type_name
              (type_identifier))))
        (ERROR
          (identifier))
        (type
          (type_name
            (type_identifier))))))
  (function_declaration
    (identifier)
    (parameter_list)
    (type
      (type_name
        (type_identifier)))
    (block
      (return_statement
        (boolean_literal)))))
